--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             background-color: #1a2a44;
             color: white;
             text-align: center;
-            font-family: Arial, sans-serif;
         }
-        #startScreen, #endScreen, #infoScreen {
+        #startScreen {
             position: absolute;
             top: 0;
             left: 0;
@@ -25,27 +24,17 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 1;
         }
-        #startScreen { z-index: 1; }
-        #gameCanvas { 
-            width: 100%; 
-            height: 100%; 
-            position: absolute; 
-            top: 0; 
-            left: 0; 
-            display: none; 
-            z-index: 2; 
+        #gameCanvas {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: none;
+            z-index: 2;
         }
-        #startCanvas { 
-            width: 100%; 
-            height: 100%; 
-            position: absolute; 
-            top: 0; 
-            left: 0; 
-            z-index: 0; 
-        }
-        #endScreen, #infoScreen { z-index: 3; display: none; }
         button {
             padding: 15px 30px;
             font-size: 22px;
@@ -65,52 +54,32 @@
             border-radius: 5px;
             border: none;
         }
-        #title {
-            font-size: 48px;
-            margin-bottom: 20px;
-        }
-        #title span {
-            display: block;
-            color: #FFD700;
-        }
-        #infoContent {
-            font-size: 18px;
-            padding: 20px;
-        }
-        #infoContent img {
-            width: 30px;
-            vertical-align: middle;
-            margin-right: 10px;
+        #endScreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 3;
         }
     </style>
 </head>
 <body>
     <div id="startScreen">
-        <canvas id="startCanvas"></canvas>
-        <div id="title">
-            <span>COIN</span>
-            <span>TAPS</span>
-        </div>
+        <h1>COIN TAPS</h1>
         <input type="text" id="nicknameInput" placeholder="Enter your nickname" maxlength="15">
         <button id="startButton">Start Game</button>
-        <button onclick="showInfo()">Info</button>
     </div>
     <canvas id="gameCanvas"></canvas>
     <div id="endScreen">
         <h1>Game Over</h1>
         <p id="finalScore"></p>
         <button onclick="restartGame()">Restart</button>
-        <button onclick="backToStart()">Main Menu</button>
-    </div>
-    <div id="infoScreen">
-        <h2>Game Rules</h2>
-        <div id="infoContent">
-            <p><img src="https://raw.githubusercontent.com/mazaya25/B3dotfun-cointaps/main/public/assets/images/BTC.png"> Tap coins to earn points (+10)</p>
-            <p><img src="https://raw.githubusercontent.com/mazaya25/B3dotfun-cointaps/main/public/assets/images/RUGPULL.png"> Avoid RugPulls (-100, -1 life)</p>
-            <p><img src="https://raw.githubusercontent.com/mazaya25/B3dotfun-cointaps/main/public/assets/images/BASE.png"> Catch BaseBonus for bonus (+250)</p>
-            <p><img src="https://raw.githubusercontent.com/mazaya25/B3dotfun-cointaps/main/public/assets/images/STAR.png"> Grab PowerUps for special effects (+50)</p>
-        </div>
-        <button onclick="hideInfo()">Close</button>
     </div>
 
     <script>
@@ -119,11 +88,8 @@
         const startButton = document.getElementById('startButton');
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
-        const startCanvas = document.getElementById('startCanvas');
-        const startCtx = startCanvas.getContext('2d');
         const endScreen = document.getElementById('endScreen');
         const finalScore = document.getElementById('finalScore');
-        const infoScreen = document.getElementById('infoScreen');
 
         // Görseller
         const coinImages = [
@@ -162,17 +128,12 @@
             lives: 5,
             level: 1,
             objects: [],
-            stars: [],
             hits: { BTC: 0, ETH: 0, DEGEN: 0, SOL: 0, DOGE: 0, BNKR: 0, USDC: 0, OP: 0, RUGPULL: 0, BASE: 0, STAR: 0 }
         };
-
-        let startEffects = { stars: [] };
 
         function adjustCanvasSize() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            startCanvas.width = window.innerWidth;
-            startCanvas.height = window.innerHeight;
         }
         adjustCanvasSize();
         window.addEventListener('resize', adjustCanvasSize);
@@ -221,28 +182,41 @@
 
         preloadImages();
 
-        class Star {
-            constructor() {
-                this.x = Math.random() * canvas.width;
-                this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 2 + 1;
-                this.speed = Math.random() * 0.2 + 0.05;
-                this.opacity = Math.random() * 0.5 + 0.5;
-                this.opacitySpeed = Math.random() * 0.02 + 0.01;
+        function submitNickname() {
+            const nickname = nicknameInput.value.trim();
+            if (nickname === "") {
+                alert("Lütfen bir nickname girin!");
+                return;
             }
-            update() {
-                this.y += this.speed;
-                if (this.y > canvas.height) this.y = -this.size;
-                this.opacity += this.opacitySpeed;
-                if (this.opacity > 1 || this.opacity < 0.2) this.opacitySpeed = -this.opacitySpeed;
-                return true;
-            }
-            draw(ctx) {
-                ctx.fillStyle = `rgba(255, 255, 255, ${this.opacity})`;
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fill();
-            }
+            gameState.nickname = nickname;
+            startGame();
+        }
+
+        startButton.addEventListener('click', submitNickname);
+        startButton.addEventListener('touchstart', (e) => {
+            e.preventDefault();
+            submitNickname();
+        });
+
+        function startGame() {
+            startScreen.style.display = 'none';
+            canvas.style.display = 'block';
+            endScreen.style.display = 'none';
+            gameState.isGameStarted = true;
+            gameState.isGameOver = false;
+            gameState.score = 0;
+            gameState.lives = 5;
+            gameState.level = 1;
+            gameState.objects = [];
+            gameState.hits = { BTC: 0, ETH: 0, DEGEN: 0, SOL: 0, DOGE: 0, BNKR: 0, USDC: 0, OP: 0, RUGPULL: 0, BASE: 0, STAR: 0 };
+            backgroundMusic.play().catch(error => {
+                console.error("Arka plan müziği oynatılamadı:", error);
+            });
+            requestAnimationFrame(gameLoop);
+        }
+
+        function restartGame() {
+            startGame();
         }
 
         class GameObject {
@@ -280,81 +254,9 @@
             }
         }
 
-        window.addEventListener('load', () => {
-            startEffects.stars = Array(30).fill().map(() => new Star());
-            drawStartEffects();
-        });
-
-        function drawStartEffects() {
-            startCtx.fillStyle = '#000';
-            startCtx.fillRect(0, 0, startCanvas.width, startCanvas.height);
-            startEffects.stars.forEach(star => { star.update(); star.draw(startCtx); });
-            if (startScreen.style.display !== 'none') {
-                requestAnimationFrame(drawStartEffects);
-            }
-        }
-
-        function submitNickname() {
-            const nickname = nicknameInput.value.trim();
-            if (nickname === "") {
-                alert("Lütfen bir nickname girin!");
-                return;
-            }
-            gameState.nickname = nickname;
-            startGame();
-        }
-
-        startButton.addEventListener('click', submitNickname);
-        startButton.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            submitNickname();
-        });
-
-        function startGame() {
-            startScreen.style.display = 'none';
-            canvas.style.display = 'block';
-            endScreen.style.display = 'none';
-            infoScreen.style.display = 'none';
-            gameState.isGameStarted = true;
-            gameState.isGameOver = false;
-            gameState.score = 0;
-            gameState.lives = 5;
-            gameState.level = 1;
-            gameState.objects = [];
-            gameState.stars = Array(30).fill().map(() => new Star());
-            gameState.hits = { BTC: 0, ETH: 0, DEGEN: 0, SOL: 0, DOGE: 0, BNKR: 0, USDC: 0, OP: 0, RUGPULL: 0, BASE: 0, STAR: 0 };
-            backgroundMusic.play().catch(error => {
-                console.error("Arka plan müziği oynatılamadı:", error);
-            });
-            requestAnimationFrame(gameLoop);
-        }
-
-        function restartGame() {
-            startGame();
-        }
-
-        function backToStart() {
-            endScreen.style.display = 'none';
-            startScreen.style.display = 'flex';
-            backgroundMusic.pause();
-            drawStartEffects();
-        }
-
-        function showInfo() {
-            infoScreen.style.display = 'flex';
-            startScreen.style.display = 'none';
-        }
-
-        function hideInfo() {
-            infoScreen.style.display = 'none';
-            startScreen.style.display = 'flex';
-            drawStartEffects();
-        }
-
         function drawGame() {
             ctx.fillStyle = '#000';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-            gameState.stars.forEach(star => { star.update(); star.draw(ctx); });
             ctx.fillStyle = 'white';
             ctx.font = '20px Arial';
             ctx.textAlign = 'left';
